--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ sqlalchemy==2.0.15
 alembic==1.11.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+argon2-cffi==25.1.0
 python-multipart==0.0.6
 pydantic==1.10.12
 python-dotenv==1.0.0
